[package]
name = "kcl-async"
version = "0.1.0"
edition = "2024"
authors = ["Shemnei"]
license = "MIT OR Apache-2.0"
keywords = ["aws", "kinesis", "async"]
exclude = [
    ".github/*",
]

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
simd-json = "0.15.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", default-features = false, features = ["io-std", "io-util"] }
