[package]
name = "kcl-async"
version = "0.1.0"
edition = "2024"
authors = ["Shemnei"]
license = "MIT OR Apache-2.0"
description = "Async KCL MultiLang Daemon library"
documentation = "https://github.com/Shemnei/kcl-async"
homepage = "https://github.com/Shemnei/kcl-async"
repository = "https://github.com/Shemnei/kcl-async"
keywords = ["aws", "kinesis", "async"]
exclude = [
    ".github/*",
    "examples/",
    "kcl-bootstrap/",
]

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
simd-json = "0.15.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", default-features = false, features = ["io-std", "io-util"] }
